--- a/src/styles/components/_infos_bar.scss
+++ b/src/styles/components/_infos_bar.scss
@@ -1,12 +1,12 @@
 .infos-bar {
-    padding: 16px 24px;
+    padding: 18px 24px;
     background-color: #fff;
     display: flex;
     justify-content: space-between;
 
     &__infos {
         display: flex;
-        gap: 40px;
+        gap: 46px;
 
         &__item {
             font-size: 14px;
@@ -22,6 +22,7 @@
 
     @media (max-width: 640px) {
         display: block;
+        padding: 10px;
         
         &__infos {
             display: block;
