--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -1,14 +1,45 @@
+@use 'variaveis';
+
 .event {
     padding: 80px 0;
-    background-image: linear-gradient(130deg, purple, pink);
 
-    .container {
+    &--nascimento{
+        background-image: linear-gradient(variaveis.$purple, variaveis.$pink2);
+    }
+    
+    &--crescimento {
+        background-image: linear-gradient(variaveis.$pink2, variaveis.$pink);
+    }
+    &--cavalcante {
+        background-image: linear-gradient(variaveis.$pink, variaveis.$pink2);
+    }
+
+    &--santos {
+        background-image: linear-gradient(variaveis.$pink2, variaveis.$pink);
+    }
+
+    &--santos2 {
+        background-image: linear-gradient(variaveis.$pink, variaveis.$pink2);
+    }
+
+    &--violeta {
+        background-image: linear-gradient(variaveis.$pink2, variaveis.$pink);
+    }
+
+    &--image-left {
+        .container {
+            flex-direction: row-reverse;
+        }
+    }
+
+        .container {
         display: flex;
+        gap: 40px;
 
     }
 
     &__image {
-        max-width: 200px;
+        max-width: 320px;
     }
 
     &__details {
