--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,10 +1,11 @@
 .hero {
-    padding-top: 64px;
-    padding-bottom: 300px;
-    background-image: url(../images/hero.jpeg);
+    padding-top: 70px;
+    padding-bottom: 250px;
+    background-image: url(../images/imagem_fundo.jpeg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 120% 100%;
     position: relative;
+
 
     .container {
         position: relative;
@@ -18,12 +19,12 @@
         height: 100%;
         background-color: #000;
         content: '';
-        opacity: 0.3;
+        opacity: 0.5;
     }
 
     &__text {
         margin-top: 64px;
-        margin-bottom: 190px;
+        margin-bottom: 100px;
         font-size: 40px;
         line-height: 56px;
         font-weight: 800;
@@ -38,6 +39,7 @@
 
     @media (max-width: 640px) {
         padding: 20px 0;
+        background-size: cover;
 
         &__logo {
             height: 80px;
@@ -49,5 +51,10 @@
             margin: 24px 0;
         }
         
+    }
+
+    @media (max-width: 1024px) {
+        padding: 20px 0;
+        background-size: cover;
     }
 }
